--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <div class="container">
     <div class="card" id="card">
-        <p class="card__bank-name" id="bank-name"></p>
-        <input type="text" id="card-number" class="card__number" maxlength="22" autofocus placeholder="0000 0000 0000 0000">
-        <p class="card__type" id="card-type"></p>
+        <p class="bank-name" id="bank-name"></p>
+        <input type="text" id="number" class="number" maxlength="22" autofocus placeholder="0000 0000 0000 0000">
+        <p class="type" id="type"></p>
     </div>
 </div>
 
