change card number mask and input placeholder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="card" id="card">
         <p class="bank-name" id="bank-name"></p>
-        <input type="text" id="number" class="number" maxlength="22" autofocus placeholder="0000 0000 0000 0000">
+        <input type="text" id="number" class="number" autofocus maxlength="22" placeholder="0000 00XX XXXX XXXX">
         <p class="type" id="type"></p>
     </div>
 </div>
