add link to repository

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
 
   <h1 class="heading">
-    <a class="repo-link">Banks DB</a>
+    <a class="repo-link" href="https://github.com/ramoona/banks-db">Banks DB</a>
     tool to get bank name and brand color by bankcard prefix (BIN)
   </h1>
 
