--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title>Banks DB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 <div class="container">
 
   <h1 class="heading">
-    <a class="repo-link" href="https://github.com/ramoona/banks-db">Banks DB</a>
-    tool to get bank name and brand color by bankcard prefix (BIN)
+    <a class="repo link" href="https://github.com/ramoona/banks-db">Banks DB</a>
+    <p class="heading__descr">tool to get bank name and brand color by bankcard prefix (BIN)</p>
   </h1>
 
   <p class="notice">Notice: only first 6 digits of card number are required.</p>
