--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Banks DB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
+  <link rel="icon" type="image/png"  href="favicon.png?v=3">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
