--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html><head>
     <meta charset="utf-8">
     <title>Banks DB</title>
+    <meta name="keywords" content="bankcard, bin, bank, card, color, database, db">
+    <meta name="description" content="Banks DB – tool to get bank name and brand color by bankcard prefix (BIN)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
-  <link rel="icon" type="image/png"  href="favicon.png?v=3">
+  <link rel="icon" type="image/png"  href="favicon.png">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 </head>
