--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Banks DB – tool to get bank name and brand color by bankcard prefix (BIN)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
-  <link rel="icon" type="image/png"  href="favicon.png">
+  <link rel="icon" type="image/png"  href="favicon.png?v=2">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 </head>
