fix for correct view on small screens

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Banks DB</title>
     <meta name="keywords" content="bankcard, bin, bank, card, color, database, db">
     <meta name="description" content="Banks DB – tool to get bank name and brand color by bankcard prefix (BIN)">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=.75">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/png"  href="/favicon.png?v=3">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
