--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Banks DB – tool to get bank name and brand color by bankcard prefix (BIN)">
     <meta name="viewport" content="width=device-width, initial-scale=.75">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" type="image/png"  href="/favicon.png?v=4">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
+    <link rel="icon" type="image/png"  href="favicon.png?v=4">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=2">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
