added OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="keywords" content="bankcard, bin, bank, card, color, database, db">
     <meta name="description" content="Banks DB – tool to get bank name and brand color by bankcard prefix (BIN)">
     <meta name="viewport" content="width=device-width, initial-scale=.75">
+    <meta property="og:url" content="https://ramoona.github.io/banks-db-demo/" />
+    <meta property="og:image" content="https://ramoona.github.io/banks-db-demo/demo-example.jpg" />
+    <meta property="og:description" content="Make your billing form UX better with tool to get bank name and brand color by bankcard prefix (BIN)" />
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/png"  href="favicon.png?v=4">
     <link rel="apple-touch-icon" href="apple-touch-icon.png?v=2">
