--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="card__type opacity-transition" id="type"></p>
   </div>
 
-  <div class="hint opacity-transition">
+  <div class="hint opacity-transition" id="hint">
     It looks like your bank or prefix isn't in Banks DB.
     <br>
     Please,
