--- a/index.html
+++ b/index.html
@@ -1,47 +1,65 @@
 <!DOCTYPE html>
-<html><head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <title>Banks DB</title>
     <meta name="keywords" content="bankcard, bin, bank, card, color, database, db">
-    <meta name="description" content="Banks DB – tool to get bank name and brand color by bankcard prefix (BIN)">
-    <meta name="viewport" content="width=device-width, initial-scale=.75">
+    <meta name="description"
+          content="Banks DB is a tool for getting bank's name and brand color by issuer identification number">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="https://ramoona.github.io/banks-db-demo/" />
     <meta property="og:image" content="https://ramoona.github.io/banks-db-demo/demo-example.jpg" />
-    <meta property="og:description" content="Make your billing form UX better with tool to get bank name and brand color by bankcard prefix (BIN)" />
-    <link rel="stylesheet" href="assets/style.css">
+    <meta property="og:description" content="Make your billing form UX better with Banks DB" />
+    <link rel="stylesheet" href="dist/styles.css">
     <link rel="icon" type="image/png"  href="favicon.png?v=4">
     <link rel="apple-touch-icon" href="apple-touch-icon.png?v=2">
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
 <div class="container">
-
-  <h1 class="heading">
-    <a class="repo link" href="https://github.com/ramoona/banks-db">Banks DB</a>
-    <p class="heading__descr">tool to get bank name and brand color by bankcard prefix (BIN)</p>
-  </h1>
-
-  <p class="notice">Notice: only first 6 digits of card number are required.</p>
-
-  <div class="card" id="card">
-      <p class="card__bank-name opacity-transition" id="bank-name"></p>
-      <input class="card__number" id="number" type="text" autofocus maxlength="22" placeholder="0000 00XX XXXX XXXX">
-      <p class="card__type opacity-transition" id="type"></p>
+  <div class="top">
+    <h1 class="heading">
+      <a class="repo-link" href="https://github.com/ramoona/banks-db">
+        <svg xmlns="http://www.w3.org/2000/svg" width="202" height="36" viewBox="0 0 202 36" class="logo">
+            <path fill="#8FD1FF"
+                  d="M188.672 1.875l.456.003c3.916.057 6.904.849 8.966 2.376 2.14 1.586 3.21 3.91 3.21 6.973 0 1.671-.429 3.144-1.288 4.418-.86 1.273-2.055 2.207-3.586 2.8 1.75.438 3.129 1.32 4.136 2.649 1.008 1.328 1.512 2.953 1.512 4.875 0 3.281-1.047 5.765-3.14 7.453-2.094 1.687-5.079 2.547-8.954 2.578H176.72V1.875h11.953zm1.523 19.266h-6.445v9.21h6.023c1.657 0 2.95-.394 3.88-1.183.929-.79 1.394-1.879 1.394-3.27 0-3.125-1.617-4.71-4.852-4.757zm-1.523-13.57h-4.922v8.6h5.203c3.547-.062 5.32-1.476 5.32-4.241 0-1.547-.449-2.66-1.347-3.34-.899-.68-2.317-1.02-4.254-1.02zM156.023 1.875l.498.006c2.8.071 5.318.745 7.553 2.021 2.367 1.352 4.215 3.274 5.543 5.766 1.328 2.492 1.992 5.324 1.992 8.496v1.57l-.006.526c-.068 2.959-.718 5.604-1.95 7.935-1.305 2.47-3.145 4.383-5.52 5.742-2.375 1.36-5.055 2.047-8.04 2.063h-10.57V1.875h10.5zm0 5.695h-3.468v22.782h3.398c2.75 0 4.852-.899 6.305-2.696 1.453-1.797 2.195-4.367 2.226-7.71V18.14l-.003-.43c-.058-3.257-.775-5.743-2.153-7.457-1.437-1.79-3.539-2.684-6.305-2.684z"/>
+            <path class="S" d="M118.102 36.469c3.14 0 5.703-.715 7.687-2.145 1.984-1.43 2.977-3.3 2.977-5.613 0-3.234-1.79-5.508-5.368-6.82-1.156-.422-2.578-.801-4.265-1.137-1.688-.336-2.887-.734-3.598-1.195-.71-.461-1.066-1.067-1.066-1.817 0-.797.312-1.453.937-1.969.625-.515 1.508-.773 2.649-.773 1.328 0 2.304.316 2.93.95.624.632.937 1.433.937 2.402h6.773c0-2.422-.965-4.391-2.894-5.907-1.93-1.515-4.504-2.273-7.723-2.273-3.016 0-5.457.754-7.324 2.262-1.867 1.507-2.8 3.386-2.8 5.636 0 3.86 3.015 6.422 9.046 7.688 1.813.375 3.129.8 3.95 1.277.82.477 1.23 1.13 1.23 1.957 0 .797-.332 1.442-.996 1.934-.664.492-1.645.738-2.942.738-1.39 0-2.5-.32-3.328-.96-.828-.642-1.273-1.563-1.336-2.767h-6.422c0 1.532.469 2.958 1.406 4.278.938 1.32 2.231 2.36 3.88 3.117 1.648.758 3.535 1.137 5.66 1.137z"/>
+            <path class="K"
+                  d="M89.578 36v-7.734l2.438-2.438L98.531 36h7.782l-9.961-14.789 9.164-10.57h-8.133l-6.492 7.617-1.313 1.687V0h-6.773v36z"/>
+            <path class="N"
+                  d="M62.555 36V18.117c.953-1.625 2.383-2.437 4.289-2.437 1.453 0 2.492.324 3.117.972.625.649.937 1.692.937 3.13V36h6.774V19.617c-.031-3.14-.703-5.5-2.016-7.078-1.312-1.578-3.312-2.367-6-2.367-3.047 0-5.476 1.133-7.289 3.398l-.21-2.93H55.78V36h6.774z"/>
+            <path class="A"
+                   d="M40.523 10.172c3.125 0 5.606.785 7.442 2.355 1.836 1.57 2.754 3.778 2.754 6.621v10.993l.006.418c.05 2.2.384 3.88 1.002 5.043V36h-6.844l-.113-.235c-.255-.566-.444-1.245-.567-2.038-1.64 1.828-3.773 2.742-6.398 2.742-2.485 0-4.543-.719-6.176-2.157-1.633-1.437-2.45-3.25-2.45-5.437 0-2.688.997-4.75 2.989-6.188 1.992-1.437 4.871-2.164 8.637-2.18h3.117v-1.452l-.005-.267c-.043-1.048-.342-1.897-.897-2.546-.602-.703-1.551-1.055-2.848-1.055-1.14 0-2.035.274-2.684.82-.648.548-.972 1.298-.972 2.25h-6.774l.007-.312c.06-1.35.511-2.605 1.353-3.765.906-1.25 2.187-2.23 3.843-2.942 1.657-.71 3.516-1.066 5.578-1.066zm3.399 14.297H41.39l-.304.003c-3.195.069-4.898 1.24-5.11 3.512l-.024.399.006.208c.046.75.34 1.376.885 1.878.593.547 1.406.82 2.437.82 1 0 1.922-.223 2.766-.668.844-.445 1.469-1.043 1.875-1.793v-4.36z"/>
+            <path class="B"
+                   d="M13.266 36c3.875-.031 6.859-.89 8.953-2.578 2.093-1.688 3.14-4.172 3.14-7.453 0-1.922-.504-3.547-1.511-4.875-1.008-1.328-2.387-2.211-4.137-2.649 1.531-.593 2.727-1.527 3.586-2.8.86-1.274 1.289-2.747 1.289-4.418 0-3.063-1.07-5.387-3.211-6.973-2.14-1.586-5.281-2.379-9.422-2.379H0V36h13.266zm-.211-5.648H7.03V21.14h6.446c3.234.047 4.851 1.632 4.851 4.757 0 1.391-.465 2.48-1.394 3.27-.93.789-2.223 1.184-3.88 1.184zm-.82-14.18H7.03V7.57h4.922c1.938 0 3.356.34 4.254 1.02.898.68 1.348 1.793 1.348 3.34 0 2.765-1.774 4.18-5.32 4.242z"/>
+        </svg>
+      </a>
+    </h1>
+    <p class="description">is a tool for getting bank's name and brand color by <a
+      href="https://en.wikipedia.org/wiki/Payment_card_number#Issuer_identification_number_(IIN)" class="link">issuer
+      identification number</a></p>
   </div>
-
-  <div class="hint opacity-transition" id="hint">
-    It looks like your bank or prefix isn't in Banks DB.
+  <p class="suggest">
+    Try
+    <span id="suggested-prefix" class="suggested-prefix"></span>
+    for
+    <span class="suggested-bank" id="suggested-bank"></span>
+  </p>
+  <div class="card" id="card" data-type="" data-bank="">
+      <span id="bank-name" class="bank-name"></span>
+      <input class="number" id="number" type="text" maxlength="22" placeholder="0000 0000 0000 0000" autofocus>
+      <div class="type"></div>
+  </div>
+  <p class="notice">Notice that only first 6 digits are required for bank detection.</p>
+  <div class="hint">
+    It looks like your bank or it's prefix isn't in Banks DB yet.
     <br>
-    Please,
+    Feel free to
     <a class="link" href="https://github.com/ramoona/banks-db/blob/master/CONTRIBUTING.md">contribute</a>
     or create an
-    <a class="link" href="https://github.com/ramoona/banks-db/issues">issue</a>.
+    <a class="link" href="https://github.com/ramoona/banks-db/issues">issue</a> if you'd like to help the project.
   </div>
-
 </div>
-
-<script src="assets/bundle.js"></script>
-
+<script src="dist/index.min.js"></script>
 </body>
 </html>
